fixed animations overflow

--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -1,3 +1,11 @@
 .timer--hidden {
   display: none;
 }
+
+.timer__times {
+  background: none;
+}
+
+.counting-parent {
+  overflow: hidden;
+}
